--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ rel="stylesheet" type="text/css" />
 <title>Demo</title>
 </head>
 <body>
-<h1>A Gathering of ...</h1>
+    <h1 id="title">A Gathering of ...</h1>
+    <ul id="dropdown">
+        <li class="menu-item"><a href="#">Home</a></li>
+        <li class="menu-item"><a href="#">Profile</a></li>
+        <li class="menu-item"><a href="#">Event</a></li>
+        <li class="menu-item"><a href="#">Discussion</a></li>
+        <li class="menu-item"><a href="#">Help</a></li>
+    </ul>
 </body>
 </html>
