--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@ rel="stylesheet" type="text/css" />
 <body>
     <h1 id="title">A Gathering of ...</h1>
     <ul id="dropdown">
-        <li class="menu-item"><a href="#">Home</a></li>
-        <li class="menu-item"><a href="#">Profile</a></li>
-        <li class="menu-item"><a href="#">Event</a></li>
-        <li class="menu-item"><a href="#">Discussion</a></li>
-        <li class="menu-item"><a href="#">Help</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Profile</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Event</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Discussion</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Help</a></li>
     </ul>
+    
+    <img src="https://static.pexels.com/photos/2422/sky-earth-galaxy-universe.jpg" id="planet"/>
+    
 </body>
 </html>
