--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-lang="en-GB" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
 <head>
 <meta charset="UTF-8"/>
-<link href="css/main.css"
-rel="stylesheet" type="text/css" />
+<link href="css/main.css" rel="stylesheet" type="text/css" />
 <title>Demo</title>
 </head>
 <body>
-    <h1 id="title">A Gathering of ...</h1>
-    <ul id="dropdown">
+    <h1 class="dropdown-parent">A Gathering of ...</h1>
+    <ul class="dropdown">
         <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
         <li class="menu-item"><a href="#" class="menu-link">Profile</a></li>
         <li class="menu-item"><a href="#" class="menu-link">Event</a></li>
