--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 <title>Demo</title>
 </head>
 <body>
-    <h1 class="dropdown-parent">A Gathering of ...</h1>
+    <h1 class="heading">A Gathering of ...</h1>
+    <i class="fa fa-bars"></i>
     <ul class="dropdown">
         <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
         <li class="menu-item"><a href="#" class="menu-link">Profile</a></li>
@@ -14,8 +16,8 @@
         <li class="menu-item"><a href="#" class="menu-link">Discussion</a></li>
         <li class="menu-item"><a href="#" class="menu-link">Help</a></li>
     </ul>
-    
+
     <img src="https://static.pexels.com/photos/2422/sky-earth-galaxy-universe.jpg" id="planet"/>
-    
+
 </body>
 </html>
