--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <h1 class="heading">A Gathering of ...</h1>
-    <i class="fa fa-bars"></i>
-    <ul class="dropdown">
-        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">Profile</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">Event</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">Discussion</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">Help</a></li>
-    </ul>
-
-    <img src="https://static.pexels.com/photos/2422/sky-earth-galaxy-universe.jpg" id="planet"/>
+    <div class="slider">
+        <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
+            <div class="dropdown">
+                <a href="#" class="menu-link">Home</a>
+                <a href="#" class="menu-link">Profile</a>
+                <a href="#" class="menu-link">Event</a>
+                <a href="#" class="menu-link">Discussion</a>
+                <a href="#" class="menu-link">Help</a>
+            </div>
+    </div>
+    
 
 </body>
 </html>
