--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="UTF-8"/>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+<script src="script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
     <h1 class="heading">A Gathering of ...</h1>
     <div class="slider">
-        <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
+        <object class="compass" data="images/compass.svg" type="image/svg+xml" onmouseover="rotateClock()"></object>
             <div class="dropdown">
                 <a href="#" class="menu-link">Home</a>
                 <a href="#" class="menu-link">Profile</a>
@@ -18,7 +19,7 @@
                 <a href="#" class="menu-link">Help</a>
             </div>
     </div>
-    
+
 
 </body>
 </html>
