--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
     <h1 class="heading">A Gathering of ...</h1>
     <div class="slider">
-        <object class="compass" data="images/compass.svg" type="image/svg+xml" onmouseover="rotateClock()"></object>
+        <div class = "menu">
+        <object class="compass" data="images/compass.svg" type="image/svg+xml" onmousenover="rotateClock()"></object>
+            Menu
+        </div>
             <div class="dropdown">
-                <a href="#" class="menu-link">Home</a>
+                <a href="index.html" class="menu-link">Home</a>
                 <a href="#" class="menu-link">Profile</a>
-                <a href="#" class="menu-link">Event</a>
+                <a href="event.html" class="menu-link">Event</a>
                 <a href="#" class="menu-link">Discussion</a>
                 <a href="#" class="menu-link">Help</a>
             </div>
