New trooper icon and opacity changes. new background colour

--- a/event.html
+++ b/event.html
@@ -6,16 +6,19 @@
 <title>Demo</title>
 </head>
 <body>
-    <h1 class="heading">The Event</h1>
+    <div class="title-bar">
+        <h1 class="heading">The Event</h1>
+        <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
+    </div>
     <div class="slider">
         <div class = "menu">
-        <object class="compass" data="images/compass.svg" type="image/svg+xml" onmousenover="rotateClock()"></object>
-            Menu
+        <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
+            <span id="compass-word">Menu</span>
         </div>
             <div class="dropdown">
                 <a href="index.html" class="menu-link">Home</a>
                 <a href="#" class="menu-link">Profile</a>
-                <a href="#" class="menu-link">Event</a>
+                <a href="event.html" class="menu-link">Event</a>
                 <a href="#" class="menu-link">Discussion</a>
                 <a href="#" class="menu-link">Help</a>
             </div>
