--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <h1 class="heading">A Gathering of ...</h1>
         <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
     </div>
+    <div class="log-in">
+        <form>
+            <input type="text" name="username" placeholder="Username" /><br>
+            <input type="password" name="password" placeholder="Password"/><br>
+        </form>
+    </div>
     <div class="slider">
         <div class = "menu">
         <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
