event page css fixed header etc

--- a/event.html
+++ b/event.html
@@ -2,26 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
 <head>
 <meta charset="UTF-8"/>
-<link href="css/main.css" rel="stylesheet" type="text/css" />
+<link href="css/event.css" rel="stylesheet" type="text/css" />
 <title>Demo</title>
 </head>
 <body>
-    <div class="title-bar">
-        <h1 class="heading">The Event</h1>
-        <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
-    </div>
-    <div class="slider">
-        <div class = "menu">
-        <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
-            <span id="compass-word">Menu</span>
+    <div id="top-bar">
+        <div class="title-bar">
+            <h1 class="heading">The Event</h1>
+            <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
         </div>
-            <div class="dropdown">
-                <a href="index.html" class="menu-link">Home</a>
-                <a href="#" class="menu-link">Profile</a>
-                <a href="event.html" class="menu-link">Event</a>
-                <a href="#" class="menu-link">Discussion</a>
-                <a href="#" class="menu-link">Help</a>
+        <div class="slider">
+            <div class = "menu">
+            <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
+                <span id="compass-word">Menu</span>
             </div>
+                <div class="dropdown">
+                    <a href="index.html" class="menu-link">Home</a>
+                    <a href="#" class="menu-link">Profile</a>
+                    <a href="event.html" class="menu-link">Event</a>
+                    <a href="#" class="menu-link">Discussion</a>
+                    <a href="#" class="menu-link">Help</a>
+                </div>
+        </div>
+    </div>
+
+    <div id="event-info">
+        <h1>HELLO</h1>
+        <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
+        <h1>HELLO</h1>
     </div>
 </body>
 </html>
