more images, started script

--- a/event.html
+++ b/event.html
@@ -9,7 +9,7 @@
     <div id="top-bar">
         <div class="title-bar">
             <h1 class="heading">The Event</h1>
-            <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
+            <object id="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
         </div>
         <div class="slider">
             <div class = "menu">
@@ -30,6 +30,43 @@
         <h1>HELLO</h1>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
         <h1>HELLO</h1>
+        <img class="event-image" src="images/redwood3.jpg" alt="Forest 3" width="900px" />
+        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT
+        </p>
+        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT
+        </p>
+        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT
+        </p>
+
+        <img class="event-image" src="images/redwood2.jpg" alt="Forest 2" width="900px" />
+
+
+
     </div>
+
 </body>
 </html>
