--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 <script src="script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
     <div id="top-bar">
         <div class="title-bar">
-            <h1 class="heading">The Event</h1>
-            <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
+            <h1 class="heading">A Gathering of ...</h1>
+            <object id="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
         </div>
     <div class="log-in">
         <form>
-            <input type="text" name="username" placeholder="Username" /><br>
-            <input type="password" name="password" placeholder="Password"/><br>
+            <input type="text" name="username" placeholder="Username" /><br />
+            <input type="password" name="password" placeholder="Password"/><br />
         </form>
     </div>
         <div class="slider">
