updated description, img alternative for non-svg browsers

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="top-bar">
         <div class="title-bar">
-            <h1 class="heading">The Event</h1>
-            <object class="trooper" data="images/trooper.svg" type="image/svg+xml"></object>
+            <h1 class="heading">A Gathering of ...</h1>
+            <object id="trooper" data="images/trooper.svg" type="image/svg+xml"><img src="images/trooper-placeholder.png" class="trooper"/></object>
         </div>
     <div class="log-in">
         <form>
@@ -21,7 +21,7 @@
     </div>
         <div class="slider">
             <div class = "menu">
-            <object class="compass" data="images/compass.svg" type="image/svg+xml"></object>
+            <object class="compass" data="images/compass.svg" type="image/svg+xml"><img src="images/compass-placeholder.png" class="compass"/></object>
                 <span id="compass-word">Menu</span>
             </div>
                 <div class="dropdown">
@@ -33,12 +33,18 @@
                 </div>
         </div>
     </div>
+    
+    <img src="images/Endor-placeholder.jpg" class="endor"/>
 
-    <p class="main-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT <br/><br/>
+    <div class="main-text">
+        <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
 
-    TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT <br/><br/>
+        <p>Thankfully for the Rebel Alliance, Botham spies have managed to learn of this plan before it's too late. Many died in the process in order to secure such information. The Rebels now have a very narrow window to act, and must thwart this operation for the sake of the Galaxy.</p>
 
-    TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
+        <p>A fleet of Rebel starships now depend on a ground team led by Princess Leia Organa to disable the shield generator and provide a window of opportunity for the Rebels' remaining fleet to conduct an all out attack on the Death Star. The shield generator must remain disabled for the duration of the assault. Will you join the Princess' strike force and do your duty in restoring freedom to the galaxy?</p>
+
+        <p>The future of the galaxy is in your hands. Failure is not an option...</p>
+    </div>
 
 </body>
 </html>
