--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <div id="top-bar">
         <div class="title-bar">
             <h1 class="heading">A Gathering of ...</h1>
-            <object id="trooper" data="images/trooper.svg" type="image/svg+xml"><img src="images/trooper-placeholder.png" class="trooper"/></object>
+            <object id="trooper" data="images/trooper.svg" type="image/svg+xml">
+              Your browser does not support svg
+            </object>
         </div>
 
         <div class="slider">
             <div class = "menu">
             <object class="compass" data="images/compass.svg" type="image/svg+xml">
-                <img src="images/compass-placeholder.png" class="compass"/>
+                Your browser does not support svg
             </object>
                 <span id="compass-word">Menu</span>
             </div>
