--- a/event.html
+++ b/event.html
@@ -3,14 +3,20 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/event.css" rel="stylesheet" type="text/css" />
+<script src="script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
     <div id="top-bar">
         <div class="title-bar">
             <h1 class="heading">The Event</h1>
-            <object id="trooper" data="images/trooper.svg" type="image/svg+xml">Your browser does not support svg</object>
+            <img class="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
         </div>
+        <form class = "log-in">
+            <input type="text" name="username" placeholder="Username" /><br />
+            <input type="password" name="password" placeholder="Password"/><br />
+        </form>
+
         <div class="slider">
             <div class = "menu">
             <object class="compass" data="images/compass.svg" type="image/svg+xml">Your browser does not support svg</object>
