--- a/event.html
+++ b/event.html
@@ -26,7 +26,7 @@
         <div class="slider">
             <div class = "menu">
             <object class="compass" data="images/compass.svg" type="image/svg+xml">Your browser does not support svg</object>
-                <span id="compass-word">Menu</span>
+                <div class="hint">Menu</div>
             </div>
                 <div class="dropdown">
                     <a href="index.html" class="menu-link">Home</a>
