--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="top-bar">
         <div class="title-bar">
             <h1 class="heading">A Gathering of ...</h1>
-            <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
+            <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/><br/>
         </div>
             <form id = "login">
                 <input type="text" name="username" placeholder="Username" /><br/>
@@ -25,10 +25,10 @@
 
         <div class="slider">
             <div class = "menu">
-            <object class="compass" data="images/compass.svg" type="image/svg+xml">
-                Your browser does not support svg
-            </object>
-                <span id="compass-word">Menu</span>
+                <object class="compass" data="images/compass.svg" type="image/svg+xml">
+                    Your browser does not support svg
+                </object>
+                <div class="hint">Menu</div>
             </div>
                 <div class="dropdown">
                     <a href="index.html" class="menu-link">Home</a>
