spinning cube, new server

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
-<script src="script.js" type="text/javascript"></script>
+<script src="js/three.min.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
@@ -34,12 +35,6 @@
         </div>
     </div>
 
-    <div id="image">
-      <img src="images/Endor-placeholder.jpg" class="endor"/><p>
-       placeholder, to be replaced by webGl 3D planet
-      </p>
-    </div>
-
     <div class="main-text">
         <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
 
@@ -49,5 +44,6 @@
 
         <p>The future of the galaxy is in your hands. Failure is not an option...</p>
     </div>
+    <canvas id="endor-canvas"></canvas>
 </body>
 </html>
