--- a/event.html
+++ b/event.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/event.css" rel="stylesheet" type="text/css" />
-<script src="script.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
