--- a/event.html
+++ b/event.html
@@ -10,22 +10,27 @@
 <body>
     <div id="top-bar">
         <div class="title-bar">
-            <h1 class="heading">The Event</h1>
-            <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
+            <h1 class="heading">A Gathering of ...</h1>
+            <div id = "logo">
+                <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
+                <div id = "login-hint">Log in</div>
+            </div>
         </div>
-        <form id = "login">
-            <input type="text" name="username" placeholder="Username" /><br />
-            <div class="form-indicator"></div>
-            <input type="password" name="password" placeholder="Password"/><br />
-            <div class="form-indicator"></div>
-            <input type="submit" value="log in" /><br />
-            Or ...<br />
-            <a href="#" class="button">sign up</a>
-        </form>
+            <form id = "login">
+                <input type="text" name="username" placeholder="Username" /><br/>
+                <div class="form-indicator" id="usernamehint"></div>
+                <input type="password" name="password" placeholder="Password"/><br/>
+                <div class="form-indicator"></div>
+                <input type="submit" value="log in" /><br />
+                Or ...<br />
+                <a href="#" class="button">sign up</a>
+            </form>
 
         <div class="slider">
             <div class = "menu">
-            <object class="compass" data="images/compass.svg" type="image/svg+xml">Your browser does not support svg</object>
+                <object class="compass" data="images/compass.svg" type="image/svg+xml">
+                    Your browser does not support svg
+                </object>
                 <div class="hint">Menu</div>
             </div>
                 <div class="dropdown">
@@ -37,7 +42,7 @@
                 </div>
         </div>
     </div>
-
+    
     <div id="event-info">
         <h1>HELLO</h1>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
