--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div id="top-bar">
         <div class="title-bar">
             <h1 class="heading">A Gathering of ...</h1>
-            <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/><br/>
+            <div id = "logo">
+                <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
+                <div id = "login-hint">Log in</div>
+            </div>
         </div>
             <form id = "login">
                 <input type="text" name="username" placeholder="Username" /><br/>
