--- a/event.html
+++ b/event.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/event.css" rel="stylesheet" type="text/css" />
+<script src = "jquery-1.12.2.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
@@ -42,7 +43,7 @@
                 </div>
         </div>
     </div>
-    
+
     <div id="event-info">
         <h1>HELLO</h1>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
