--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/main.css" rel="stylesheet" type="text/css" />
+<script src = "jquery-1.12.2.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
