--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <script src="js/three.min.js" type="text/javascript"></script>
+<script src="js/globe.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
