profile picture with replacable user icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
                 <div class="dropdown">
                     <a href="index.html" class="menu-link">Home</a>
-                    <a href="#" class="menu-link">Profile</a>
+                    <a href="profile.html" class="menu-link">Profile</a>
                     <a href="event.html" class="menu-link">Event</a>
                     <a href="#" class="menu-link">Discussion</a>
                     <a href="#" class="menu-link">Help</a>
