--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@
               </div>
       </div>
   </div>
-  <div class="header">
+  <div class="profile-info">
     <div class = "profile-pic">
       <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
       <img class="pic" src="images/user.svg" />
