profile.css + added twitter timeline to event.html. Timeline needs repositioning as currently over title

--- a/event.html
+++ b/event.html
@@ -44,6 +44,9 @@
         </div>
     </div>
 
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761">#StarWars Tweets</a>
+
+
     <div id="event-info">
         <h1>HELLO</h1>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
