--- a/event.html
+++ b/event.html
@@ -5,13 +5,15 @@
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/event.css" rel="stylesheet" type="text/css" />
 <script src="js/script.js" type="text/javascript"></script>
-<script src = "jquery-1.12.2.min.js"></script>
+<script src = "js/jquery-1.12.2.min.js"></script>
 <title>Demo</title>
 </head>
 <body>
     <div id="top-bar">
         <div class="title-bar">
-            <h1 class="heading">A Gathering of ...</h1>
+            <h1 class="heading">A Gathering of ...<br/>
+                    <div id='underline'></div>
+            </h1>
             <div id = "logo">
                 <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
                 <div id = "login-hint">Log in</div>
