--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,9 @@
 <body>
   <div id="top-bar">
       <div class="title-bar">
-          <h1 class="heading">A Gathering of ...</h1>
+          <h1 class="heading">A Gathering of ...<br/>
+                  <div id='underline'></div>
+          </h1>
           <div id = "logo">
               <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
               <div id = "login-hint">Log in</div>
@@ -43,7 +45,7 @@
               </div>
       </div>
   </div>
-  
+
   <div class="profile-info">
     <div class = "profile-pic">
       <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
