--- a/tickets.html
+++ b/tickets.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
-<link href="css/main.css" rel="stylesheet" type="text/css" />
-<script src="js/three.min.js" type="text/javascript"></script>
-<script src="js/globe.js" type="text/javascript"></script>
+<link href="css/tickets.css" rel="stylesheet" type="text/css" />
 <script src="js/script.js" type="text/javascript"></script>
 <script src = "js/jquery-1.12.2.min.js"></script>
 <title>Demo</title>
@@ -44,18 +42,33 @@
                 <input type="submit" value="log in" class="button"/><br />
                 <a href="#" class="button" id="sign-up">sign up</a>
             </form>
+    </div>
+    <div id='tickets'>
+        <img id="forest-back" src="images/forest.jpg" alt="Forest 1"/>
+        <div class='scrolling'>
+            <div class='svg-pic'>
+                <svg id="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d'/>
+                </svg>
+            </div>
 
+            <div id='text-black'>
+
+                <p>
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                        TEXT TEXT
+                </p>
+            </div>
+        </div>
     </div>
 
-    <div class="main-text">
-        <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
 
-        <p>Thankfully for the Rebel Alliance, Botham spies have managed to learn of this plan before it's too late. Many died in the process in order to secure such information. The Rebels now have a very narrow window to act, and must thwart this operation for the sake of the Galaxy.</p>
-
-        <p>A fleet of Rebel starships now depend on a ground team led by Princess Leia Organa to disable the shield generator and provide a window of opportunity for the Rebels' remaining fleet to conduct an all out attack on the Death Star. The shield generator must remain disabled for the duration of the assault. Will you join the Princess' strike force and do your duty in restoring freedom to the galaxy?</p>
-
-        <p>The future of the galaxy is in your hands. Failure is not an option...</p>
-    </div>
-    <canvas id="endor-canvas"></canvas>
 </body>
 </html>
