--- a/event.html
+++ b/event.html
@@ -11,6 +11,21 @@
 <body>
     <div id="top-bar">
         <div class="title-bar">
+            <div class="slider">
+                <div class = "menu">
+                    <object class="compass" data="images/compass.svg" type="image/svg+xml">
+                        Your browser does not support svg
+                    </object>
+                    <div class="hint">Menu</div>
+                </div>
+                    <div class="dropdown">
+                        <a href="index.html" class="menu-link">Home</a>
+                        <a href="profile.html" class="menu-link">Profile</a>
+                        <a href="event.html" class="menu-link">Event</a>
+                        <a href="tickets.html" class="menu-link">Tickets</a>
+                        <a href="#" class="menu-link">Help</a>
+                    </div>
+            </div>
             <h1 class="heading">A Gathering of ...<br/>
                     <div id='underline'></div>
             </h1>
@@ -24,26 +39,10 @@
                 <div class="form-indicator" id="usernamehint"></div>
                 <input type="password" name="password" placeholder="Password"/><br/>
                 <div class="form-indicator"></div>
-                <input type="submit" value="log in" /><br />
-                Or ...<br />
-                <a href="#" class="button">sign up</a>
+                <input type="submit" value="log in" class="button"/><br />
+                <a href="#" class="button" id="sign-up">sign up</a>
             </form>
 
-        <div class="slider">
-            <div class = "menu">
-                <object class="compass" data="images/compass.svg" type="image/svg+xml">
-                    Your browser does not support svg
-                </object>
-                <div class="hint">Menu</div>
-            </div>
-                <div class="dropdown">
-                    <a href="index.html" class="menu-link">Home</a>
-                    <a href="profile.html" class="menu-link">Profile</a>
-                    <a href="event.html" class="menu-link">Event</a>
-                    <a href="#" class="menu-link">Discussion</a>
-                    <a href="#" class="menu-link">Help</a>
-                </div>
-        </div>
     </div>
 
     <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761">#StarWars Tweets</a>
