--- a/profile.html
+++ b/profile.html
@@ -5,46 +5,45 @@
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/profile.css" rel="stylesheet" type="text/css" />
 <script src="js/script.js" type="text/javascript"></script>
-<script src = "jquery-1.12.2.min.js"></script>
+<script src = "js/jquery-1.12.2.min.js"></script>
 <title>Demo</title>
 </head>
 <body>
-  <div id="top-bar">
-      <div class="title-bar">
-          <h1 class="heading">A Gathering of ...<br/>
-                  <div id='underline'></div>
-          </h1>
-          <div id = "logo">
-              <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
-              <div id = "login-hint">Log in</div>
-          </div>
-      </div>
-          <form id = "login">
-              <input type="text" name="username" placeholder="Username" /><br/>
-              <div class="form-indicator" id="usernamehint"></div>
-              <input type="password" name="password" placeholder="Password"/><br/>
-              <div class="form-indicator"></div>
-              <input type="submit" value="log in" /><br />
-              Or ...<br />
-              <a href="#" class="button">sign up</a>
-          </form>
+    <div id="top-bar">
+        <div class="title-bar">
+            <div class="slider">
+                <div class = "menu">
+                    <object class="compass" data="images/compass.svg" type="image/svg+xml">
+                        Your browser does not support svg
+                    </object>
+                    <div class="hint">Menu</div>
+                </div>
+                    <div class="dropdown">
+                        <a href="index.html" class="menu-link">Home</a>
+                        <a href="profile.html" class="menu-link">Profile</a>
+                        <a href="event.html" class="menu-link">Event</a>
+                        <a href="tickets.html" class="menu-link">Tickets</a>
+                        <a href="#" class="menu-link">Help</a>
+                    </div>
+            </div>
+            <h1 class="heading">A Gathering of ...<br/>
+                    <div id='underline'></div>
+            </h1>
+            <div id = "logo">
+                <img id="trooper" src="images/trooper.svg" alt="Your browser does not support svg"/>
+                <div id = "login-hint">Log in</div>
+            </div>
+        </div>
+            <form id = "login">
+                <input type="text" name="username" placeholder="Username" /><br/>
+                <div class="form-indicator" id="usernamehint"></div>
+                <input type="password" name="password" placeholder="Password"/><br/>
+                <div class="form-indicator"></div>
+                <input type="submit" value="log in" class="button"/><br />
+                <a href="#" class="button" id="sign-up">sign up</a>
+            </form>
 
-      <div class="slider">
-          <div class = "menu">
-              <object class="compass" data="images/compass.svg" type="image/svg+xml">
-                  Your browser does not support svg
-              </object>
-              <div class="hint">Menu</div>
-          </div>
-              <div class="dropdown">
-                  <a href="index.html" class="menu-link">Home</a>
-                  <a href="profile.html" class="menu-link">Profile</a>
-                  <a href="event.html" class="menu-link">Event</a>
-                  <a href="#" class="menu-link">Discussion</a>
-                  <a href="#" class="menu-link">Help</a>
-              </div>
-      </div>
-  </div>
+    </div>
 
   <div class="profile-info">
     <div class = "profile-pic">
