--- a/tickets.html
+++ b/tickets.html
@@ -46,26 +46,31 @@
     <div id='tickets'>
         <img id="forest-back" src="images/forest.jpg" alt="Forest 1"/>
         <div class='scrolling'>
-            <div class='svg-pic'>
-                <svg id="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
-                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d'/>
+                <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3'/>
                 </svg>
-            </div>
-
             <div id='text-black'>
+                <div class='text'>
+                    <h2>Ewok Package</h2>
+                    <ul>
+                        <li>This is some info about the Ewok package</li>
+                        <li>This is some info about the Ewok package</li>
+                        <li>This is some info about the Ewok package</li>
+                        <li>This is some info about the Ewok package</li>
+                        <li>This is some info about the Ewok package</li>
+                    </ul>
+                </div>
+                <div class='buttons'>
 
-                <p>
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-                        TEXT TEXT
-                </p>
+                    <p> TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
+
+
+
+                </div>
             </div>
+                <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,0 100,10 100,0" style='fill: #0d0d0d;  stroke: #0d0d0d; stroke-width: 3'/>
+                </svg>
         </div>
     </div>
 
