more work on tickets

--- a/tickets.html
+++ b/tickets.html
@@ -51,7 +51,7 @@
             </svg>
             <div class='package black'>
                 <div class='text'>
-                    <h2>Ewok Package</h2>
+                    <h2 id="ewok1">Ewok Package</h2>
                     <ul>
                         <li>Entry into the arena</li>
                         <li>Access to all standard events</li>
@@ -61,24 +61,30 @@
                 </div>
                 <div class='buttons'>
                     <a href="#" class='purchase'>Purchase Ticket</a>
-                    <a href='#' class='terms'>Terms & Conditions</a>
+                    <a href='#' class='terms'>Terms and Conditions</a>
                     <p>Already have a ticket?</p>
-                    <a href='#' class='sign-in'>Sign In</a>
+                    <a href='#' class='sign-in'>Log In</a>
                 </div>
             </div>
                 <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
                     <polygon points="0,0 100,10 100,0" style='fill: #0d0d0d;  stroke: #0d0d0d; stroke-width: 3'/>
                 </svg>
             <div class="package frosted">
+                <div class='buttons'>
+                    <a href="#" class='purchase'>Purchase Ticket</a>
+                    <a href='#' class='terms'>Terms and Conditions</a>
+                    <p>Already have a ticket?</p>
+                    <a href='#' class='sign-in'>Log In</a>
+                </div>
                 <div class='text'>
                     <h2>Ewok Package</h2>
                     <ul>
-                        <li>This is some info about the Ewok package</li>
-                        <li>This is some info about the Ewok package</li>
-                        <li>This is some info about the Ewok package</li>
-                        <li>This is some info about the Ewok package</li>
-                        <li>This is some info about the Ewok package</li>
+                        <li>Entry into the arena</li>
+                        <li>Access to all standard events</li>
+                        <li>Complimentary key chain</li>
+                        <li>Photo opportunity with a real Ewok</li>
                     </ul>
+
                 </div>
             </div>
 
@@ -87,10 +93,19 @@
             </svg>
             <div class="package black">
                 <div class='text'>
-                    <p> TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
-                    <p> TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
-                    <p> TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
-                    <p> TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT </p>
+                    <h2 id="ewok2">Ewok Package</h2>
+                    <ul>
+                        <li>Entry into the arena</li>
+                        <li>Access to all standard events</li>
+                        <li>Complimentary key chain</li>
+                        <li>Photo opportunity with a real Ewok</li>
+                    </ul>
+                </div>
+                <div class='buttons'>
+                    <a href="#" class='purchase'>Purchase Ticket</a>
+                    <a href='#' class='terms'>Terms and Conditions</a>
+                    <p>Already have a ticket?</p>
+                    <a href='#' class='sign-in'>Log In</a>
                 </div>
             </div>
             <svg class="triangle " xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
