button to run planet animation. Ratios not quite working when in half screen

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 
         <p>The future of the galaxy is in your hands. Failure is not an option...</p>
     </div>
-    <canvas id="endor-canvas"></canvas>
+
+    <div class="planet-side">
+        <img id='static-endor' src="images/static_planet.png" />
+        <canvas id="endor-canvas"></canvas>
+        <button class="activate">Animate</button>
+    </div>
 </body>
 </html>
