Added social media logos

--- a/event.html
+++ b/event.html
@@ -5,6 +5,7 @@
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/event.css" rel="stylesheet" type="text/css" />
 <script src="js/script.js" type="text/javascript"></script>
+<script src="js/social_media.js" type="text/javascript"></script>
 <script src = "js/jquery-1.12.2.min.js"></script>
 <title>Demo</title>
 </head>
@@ -45,7 +46,12 @@
 
     </div>
 
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761">#StarWars Tweets</a>
+    <div class="social-media">
+        <img id="twitter" src="images/twitter.svg" />
+        <img id="instagram" src="images/instagram.svg" />
+        <img id="facebook" src="images/facebook.svg" />
+    </div>
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761"></a>
 
 
     <div id="event-info">
