underlining on scroll

--- a/tickets.html
+++ b/tickets.html
@@ -51,7 +51,9 @@
             </svg>
             <div class='package black'>
                 <div class='text'>
-                    <h2 id="ewok1">Ewok Package</h2>
+                    <h2 class="packageHeading">Ewok Package<br/>
+                            <div class='underline'></div>
+                    </h2>
                     <ul>
                         <li>Entry into the arena</li>
                         <li>Access to all standard events</li>
@@ -77,7 +79,9 @@
                     <a href='#' class='sign-in'>Log In</a>
                 </div>
                 <div class='text'>
-                    <h2>Ewok Package</h2>
+                    <h2 class="packageHeading">Rebel Package<br/>
+                            <div class='underline'></div>
+                    </h2>
                     <ul>
                         <li>Entry into the arena</li>
                         <li>Access to all standard events</li>
@@ -93,7 +97,9 @@
             </svg>
             <div class="package black">
                 <div class='text'>
-                    <h2 id="ewok2">Ewok Package</h2>
+                    <h2 class="packageHeading">Jedi Package<br/>
+                            <div class='underline'></div>
+                    </h2>
                     <ul>
                         <li>Entry into the arena</li>
                         <li>Access to all standard events</li>
