--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <script src="js/three.min.js" type="text/javascript"></script>
 <script src="js/globe.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
-<script src = "js/jquery-1.12.2.min.js"></script>
+<script src = "js/jquery-1.12.2.min.js" type="text/javascript"></script>
+<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
