profile page work

--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,6 @@
                         <a href="profile.html" class="menu-link">Profile</a>
                         <a href="event.html" class="menu-link">Event</a>
                         <a href="tickets.html" class="menu-link">Tickets</a>
-                        <a href="#" class="menu-link">Help</a>
                     </div>
             </div>
             <h1 class="heading">A Gathering of ...<br/>
@@ -45,11 +44,33 @@
 
     </div>
 
-  <div class="profile-info">
+    <div class="profile-info">
     <div class = "profile-pic">
-      <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
-      <img class="pic" src="images/user.svg" />
+        <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
+        <img class="pic" src="images/user.svg" />
     </div>
-  </div>
+    <div class="info">
+        <div class="info-line">
+            <span class="info-type">Name: </span><div class="box"></div>
+        </div>
+        <div class="info-line">
+            <span class="info-type">Character Name:</span> <div class="box"></div>
+        </div>
+        <div class="info-line">
+            <span class="info-type">Email: </span> <div class="box"></div>
+        </div>
+        <div class="info-line">
+            <span class="info-type">Tickets: </span> <div class="box"></div>
+        </div>
+        <button type="button" class='button-outfit'>Outfit Details</button>
+        <div class="costume-info">
+
+        </div>
+    </div>
+
+    </div>
+    <div class="footer">
+        <h2> FOOTER HERE </h2>
+    </div>
 </body>
 </html>
