--- a/tickets.html
+++ b/tickets.html
@@ -23,7 +23,6 @@
                         <a href="profile.html" class="menu-link">Profile</a>
                         <a href="event.html" class="menu-link">Event</a>
                         <a href="tickets.html" class="menu-link">Tickets</a>
-                        <a href="#" class="menu-link">Help</a>
                     </div>
             </div>
             <h1 class="heading">A Gathering of ...<br/>
@@ -46,6 +45,7 @@
     <div id='tickets'>
         <img id="forest-back" src="images/forest.jpg" alt="Forest 1"/>
         <div class='scrolling'>
+            <img id="arrow" src="images/arrow.svg" alt="Your browser does not support svg" />
             <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
                 <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3'/>
             </svg>
